@@ -40,6 +40,9 @@ extern "C" {
 #undef WIN32_LEAN_AND_MEAN
 #endif
 
+/* For int types. */
+#include <evutil.h>
+
 /** @file evhttp.h
  *
  * Basic support for HTTP serving.
@@ -82,9 +85,24 @@ struct evhttp *evhttp_new(struct event_base *base);
  * @param address a string containing the IP address to listen(2) on
  * @param port the port number to listen on
  * @return 0 on success, -1 on failure.
- * @see evhttp_free()
+ * @see evhttp_free(), evhttp_accept_socket()
  */
 int evhttp_bind_socket(struct evhttp *http, const char *address, u_short port);
+
+/**
+ * Makes an HTTP server accept connections on the specified socket
+ *
+ * This may be useful to create a socket and then fork multiple instances
+ * of an http server, or when a socket has been communicated via file
+ * descriptor passing in situations where an http servers does not have
+ * permissions to bind to a low-numbered port.
+ *
+ * @param http a pointer to an evhttp object
+ * @param fd a socket fd that is ready for accepting connections
+ * @return 0 on success, -1 on failure.
+ * @see evhttp_free(), evhttp_bind_socket()
+ */
+int evhttp_accept_socket(struct evhttp *http, evutil_socket_t fd);
 
 /**
  * Free the previously created HTTP server.
